--- a/Inventoryconsumables.html
+++ b/Inventoryconsumables.html
@@ -14,7 +14,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 100%;
             margin: auto;
             background: #fff;
             padding: 20px;
@@ -74,7 +74,6 @@
         }
 
         .form-section {
-            display: none;
             margin-top: 20px;
             padding: 20px;
             border: 1px solid #ddd;
@@ -85,6 +84,42 @@
         .toggle-button {
             margin: 10px 0;
         }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 60px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -92,32 +127,43 @@
     <div class="container">
         <h1>Inventory Consumables</h1>
 
+        <!-- Button to toggle inventory form -->
+        <button id="toggleInventoryFormButton" class="toggle-button">Hide Form</button>
+
         <!-- Form to add new items -->
-        <form id="inventoryForm">
-            <div class="form-row">
-                <div>
-                    <label for="itemId">Item ID:</label>
-                    <input type="text" id="itemId" required>
+        <div id="inventoryFormContainer" class="form-section">
+            <form id="inventoryForm">
+                <div class="form-row">
+                    <div>
+                        <label for="itemId">Item ID:</label>
+                        <input type="text" id="itemId" required>
+                    </div>
+                    <div>
+                        <label for="itemName">Resource Name:</label>
+                        <input type="text" id="itemName" required>
+                    </div>
+                    <div>
+                        <label for="itemStock">Current Stock:</label>
+                        <input type="number" id="itemStock" required>
+                    </div>
+                    <div>
+                        <label for="itemPrice">Price Value:</label>
+                        <input type="number" id="itemPrice" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="itemName">Item Name:</label>
-                    <input type="text" id="itemName" required>
-                </div>
-                <div>
-                    <label for="itemQuantity">Quantity:</label>
-                    <input type="number" id="itemQuantity" required>
-                </div>
-            </div>
-            <button type="submit">Add Item</button>
-        </form>
+                <button type="submit">Add Item</button>
+            </form>
+        </div>
 
         <!-- Table to display inventory -->
         <table id="inventoryTable">
             <thead>
                 <tr>
                     <th>Item ID</th>
-                    <th>Item Name</th>
-                    <th>Quantity</th>
+                    <th>Resource Name</th>
+                    <th>Current Stock</th>
+                    <th>Price Value</th>
+                    <th>Requested</th>
                     <th>Action</th>
                 </tr>
             </thead>
@@ -125,55 +171,24 @@
                 <!-- Rows will be added dynamically here -->
             </tbody>
         </table>
+    </div>
 
-        <!-- Form to issue out items -->
-        <div id="issueOutForm" class="form-section">
-            <h2>Issue Out Item</h2>
-            <form id="issueOutDetailsForm">
-                <div class="form-row">
-                    <div>
-                        <label for="issueItemId">Item ID:</label>
-                        <input type="text" id="issueItemId" readonly>
-                    </div>
-                    <div>
-                        <label for="issueDate">Date:</label>
-                        <input type="date" id="issueDate" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div>
-                        <label for="issuePersonnel">Personnel:</label>
-                        <input type="text" id="issuePersonnel" required>
-                    </div>
-                    <div>
-                        <label for="issueLocation">Location:</label>
-                        <input type="text" id="issueLocation" required>
-                    </div>
-                </div>
-                <button type="submit">Issue Item</button>
-                <button type="button" id="closeIssueOutForm">Cancel</button>
-            </form>
-        </div>
-
-        <!-- Button to toggle issued out items -->
-        <button id="toggleIssuedOutButton" class="toggle-button">Show Issued Out Items</button>
-
-        <!-- Table to display issued out items -->
-        <div id="issuedOutSection" class="form-section">
-            <h2>Issued Out Items</h2>
-            <table id="issuedOutTable">
+    <!-- Modal for item history -->
+    <div id="historyModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Item History</h2>
+            <table id="historyTable">
                 <thead>
                     <tr>
-                        <th>Item ID</th>
-                        <th>Item Name</th>
-                        <th>Quantity</th>
                         <th>Date</th>
-                        <th>Personnel</th>
-                        <th>Location</th>
+                        <th>Task ID</th>
+                        <th>Project Name</th>
+                        <th>Quantity</th>
                     </tr>
                 </thead>
-                <tbody id="issuedOutTableBody">
-                    <!-- Rows will be added dynamically here -->
+                <tbody id="historyTableBody">
+                    <!-- History rows will be added dynamically here -->
                 </tbody>
             </table>
         </div>
@@ -222,7 +237,9 @@
                         newRow.insertCell(0).textContent = item.binId;
                         newRow.insertCell(1).textContent = item.name;
                         newRow.insertCell(2).textContent = item.stockAvailable;
-                        newRow.insertCell(3).innerHTML = `<button class="issue-button" onclick="openIssueOutForm('${item.binId}', '${item.name}', ${item.stockAvailable})">Issue Out</button>`;
+                        newRow.insertCell(3).textContent = item.price;
+                        newRow.insertCell(4).textContent = item.requested || 0;
+                        newRow.insertCell(5).innerHTML = `<button class="history-button" onclick="viewItemHistory('${item.binId}')">View Item History</button>`;
                     });
                 }
             });
@@ -245,62 +262,49 @@
                 if (itemKey) {
                     const itemRef = ref(db, `inventory/${itemKey}`);
                     update(itemRef, {
-                        stockAvailable: data[itemKey].stockAvailable + item.stockAvailable
+                        stockAvailable: data[itemKey].stockAvailable + item.stockAvailable,
+                        price: item.price
                     });
                     logHistory("Update", `Updated item ${item.name} in bin ${item.binId}, added ${item.stockAvailable} to stock.`);
                 } else {
                     const newItemRef = push(inventoryRef);
                     set(newItemRef, item);
-                    logHistory("Add", `Added new item ${item.name} to bin ${item.binId} with stock ${item.stockAvailable}.`);
+                    logHistory("Add", `Added new item ${item.name} to bin ${item.binId} with stock ${item.stockAvailable} and price ${item.price}.`);
                 }
             }, { onlyOnce: true });
         }
 
-        // Load issued out items from localStorage
-        function loadIssuedOutItems() {
-            const issuedOutItems = JSON.parse(localStorage.getItem('issuedOutItems')) || [];
-            issuedOutTableBody.innerHTML = ''; // Clear existing rows
+        // View Item History
+        function viewItemHistory(itemId) {
+            const historyModal = document.getElementById("historyModal");
+            const historyTableBody = document.getElementById("historyTableBody");
+            historyTableBody.innerHTML = ''; // Clear existing table rows
 
-            issuedOutItems.forEach(item => {
-                const row = issuedOutTableBody.insertRow();
-                row.insertCell(0).textContent = item.id;
-                row.insertCell(1).textContent = item.name;
-                row.insertCell(2).textContent = item.quantity;
-                row.insertCell(3).textContent = item.date;
-                row.insertCell(4).textContent = item.personnel;
-                row.insertCell(5).textContent = item.location;
+            const historyRef = ref(db, "history/");
+            onValue(historyRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    Object.keys(data).forEach((key) => {
+                        const history = data[key];
+                        if (history.details.includes(`bin ${itemId}`)) {
+                            const detailsArray = history.details.split(', ');
+                            const taskId = detailsArray[1].split(' ')[2];
+                            const projectName = detailsArray[2].split(' ')[2];
+                            const quantity = detailsArray[3].split(' ')[1];
+                            const date = new Date(history.timestamp).toLocaleString();
+                            const newRow = historyTableBody.insertRow();
+                            newRow.insertCell(0).textContent = date;
+                            newRow.insertCell(1).textContent = taskId;
+                            newRow.insertCell(2).textContent = projectName;
+                            newRow.insertCell(3).textContent = quantity;
+                        }
+                    });
+                }
             });
+
+            // Display the modal
+            historyModal.style.display = "block";
         }
-
-        // Save issued out items to localStorage
-        function saveIssuedOutItem(item) {
-            const issuedOutItems = JSON.parse(localStorage.getItem('issuedOutItems')) || [];
-            issuedOutItems.push(item);
-            localStorage.setItem('issuedOutItems', JSON.stringify(issuedOutItems));
-            loadIssuedOutItems();
-        }
-
-        // Open issue out form
-        window.openIssueOutForm = function(id, name, quantity) {
-            issueItemId.value = id;
-            issueOutForm.style.display = 'block';
-        }
-
-        // Close the issue out form
-        closeIssueOutForm.addEventListener('click', function() {
-            issueOutForm.style.display = 'none';
-        });
-
-        // Toggle visibility of issued out items section
-        toggleIssuedOutButton.addEventListener('click', function() {
-            if (issuedOutSection.style.display === 'none' || issuedOutSection.style.display === '') {
-                issuedOutSection.style.display = 'block';
-                toggleIssuedOutButton.innerText = 'Hide Issued Out Items';
-            } else {
-                issuedOutSection.style.display = 'none';
-                toggleIssuedOutButton.innerText = 'Show Issued Out Items';
-            }
-        });
 
         // Handle the form submission for adding inventory
         inventoryForm.addEventListener('submit', function(event) {
@@ -308,12 +312,14 @@
 
             const binId = document.getElementById('itemId').value;
             const name = document.getElementById('itemName').value;
-            const stockAvailable = parseInt(document.getElementById('itemQuantity').value);
+            const stockAvailable = parseInt(document.getElementById('itemStock').value);
+            const price = parseFloat(document.getElementById('itemPrice').value);
 
             const item = {
                 binId,
                 name,
                 stockAvailable,
+                price,
                 requested: 0
             };
 
@@ -324,64 +330,34 @@
             inventoryForm.reset();
         });
 
-        // Handle the form submission for issuing out inventory
-        issueOutDetailsForm.addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent form from refreshing the page
-
-            const id = issueItemId.value;
-            const date = document.getElementById('issueDate').value;
-            const personnel = document.getElementById('issuePersonnel').value;
-            const location = document.getElementById('issueLocation').value;
-
-            const rowToDelete = [...inventoryTableBody.rows].find(row => row.cells[0].innerText === id);
-            if (rowToDelete) {
-                const name = rowToDelete.cells[1].innerText;
-                const quantity = rowToDelete.cells[2].innerText;
-
-                inventoryTableBody.deleteRow(rowToDelete.rowIndex - 1);
-
-                const issuedOutItem = {
-                    id: id,
-                    name: name,
-                    quantity: quantity,
-                    date: date,
-                    personnel: personnel,
-                    location: location
-                };
-
-                // Save issued out item to localStorage
-                saveIssuedOutItem(issuedOutItem);
-
-                // Update inventory in Firebase
-                const inventoryRef = ref(db, "inventory/");
-                onValue(inventoryRef, (snapshot) => {
-                    const data = snapshot.val();
-                    let itemKey = null;
-                    if (data) {
-                        Object.keys(data).forEach((key) => {
-                            if (data[key].binId === id && data[key].name === name) {
-                                itemKey = key;
-                            }
-                        });
-                    }
-
-                    if (itemKey) {
-                        const itemRef = ref(db, `inventory/${itemKey}`);
-                        update(itemRef, {
-                            stockAvailable: data[itemKey].stockAvailable - quantity
-                        });
-                        logHistory("Issue", `Issued item ${name} from bin ${id}, quantity: ${quantity}, to ${personnel} at ${location}`);
-                    }
-                }, { onlyOnce: true });
+        // Toggle inventory form visibility
+        toggleInventoryFormButton.addEventListener('click', function() {
+            const inventoryFormContainer = document.getElementById('inventoryFormContainer');
+            if (inventoryFormContainer.style.display === 'none' || inventoryFormContainer.style.display === '') {
+                inventoryFormContainer.style.display = 'block';
+                toggleInventoryFormButton.innerText = 'Hide Form';
+            } else {
+                inventoryFormContainer.style.display = 'none';
+                toggleInventoryFormButton.innerText = 'Show Form';
             }
-
-            issueOutForm.style.display = 'none';
         });
 
-        // Load initial inventory and issued out items data
+        // Load initial inventory data
         window.onload = function() {
             loadInventory();
-            loadIssuedOutItems();
+        };
+
+        // Close the modal when the user clicks on <span> (x)
+        document.querySelector(".close").onclick = function() {
+            document.getElementById("historyModal").style.display = "none";
+        };
+
+        // Close the modal when the user clicks anywhere outside of the modal
+        window.onclick = function(event) {
+            const historyModal = document.getElementById("historyModal");
+            if (event.target == historyModal) {
+                historyModal.style.display = "none";
+            }
         };
     </script>
 </body>
